tdf#93569 - restore ACT_ABORT distinction.

In order to handle signals, we need to have ACT_ABORT in place
and distinct from ACT_SYSTEM.

cf. if (Signals[i].Action != ACT_SYSTEM) during setup.

Change-Id: I8c69d48244ba462f2e2385a530cbbf4740ccee9a
Reviewed-on: https://gerrit.libreoffice.org/17893
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>